# vkaTest2

./: .clang-format  CMakeLists.txt  build.sh  conanfile.py  install.sh  run.sh
src/: CMakeLists.txt  main.cpp  shader.frag  shader.frag.json  shader.vert  shader.vert.json
